--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                     <form method="POST">
                         <button name="wn" class="cool-button">White Noise</button>
                         <div>
-                            <button name="stop" class="cool-button">STOP</button>
+                            <button name="stop" class="cool-button secondary">STOP</button>
                         </div>
                     </form>
                 </div>
