--- a/templates/alarm.html
+++ b/templates/alarm.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="format-detection" content="telephone=no">
@@ -98,7 +99,7 @@
     </span>
 </div>
 <div class="container">
-<form method="GET" action="/set_alarm">
+<form method="POST">
     <input type="hidden" name="i_time" id="i_time" value="">
     <button class="cool-button" id="submitTime">Submit Time</button>
 </form>
