--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,9 @@
     <title>White Noise</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"> -->
     <link rel="stylesheet" href="static/swiper.css">
+
     <link rel="stylesheet" href="static/styles.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -33,54 +35,36 @@
 <body>
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <!-- White Noise Page -->
-            <div class="swiper-slide">
+            <!-- Page 1 -->
+            <div class="swiper-slide page">
                 <div class="container">
                     <h1>White Noise</h1>
-                    <div class="action-buttons">
-                        <a href="/?action=wn" class="cool-button primary">
-                            <span class="material-symbols-outlined">play_arrow</span>
-                            White Noise
-                        </a>
-                        <a href="/?action=stop" class="cool-button secondary">
-                            <span class="material-symbols-outlined">stop</span>
-                            Stop
-                        </a>
-                    </div>
+                    <form method="POST">
+                        <button name="wn" class="cool-button">White Noise</button>
+                        <div>
+                            <button name="stop" class="cool-button secondary">STOP</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             
-            <!-- Alarm Page -->
-            <div class="swiper-slide">
+            <!-- Page 2 -->
+            <div class="swiper-slide page">
                 <div class="container">
                     <h1>Alarm</h1>
                     {% if alarm_time %}
-                    <div class="current-alarm">
-                        <h2>{{ alarm_time }}</h2>
-                        <div class="alarm-actions">
-                            <a href="/alarm" class="cool-button">
-                                <span class="material-symbols-outlined">edit</span>
-                                Edit Alarm
-                            </a>
-                            <a href="/delete_alarm" class="cool-button secondary">
-                                <span class="material-symbols-outlined">delete</span>
-                                Delete
-                            </a>
-                        </div>
-                    </div>
+                    <h1>{{ alarm_time }}</h1>
+                    <a href="/alarm"><button class="cool-button">New Alarm</button></a>
+                    <a href="/delete_alarm"><button class="cool-button">Delete Alarm</button></a>
                     {% else %}
-                    <div class="no-alarm">
-                        <h2>No Alarm Set</h2>
-                        <a href="/alarm" class="cool-button">
-                            <span class="material-symbols-outlined">add_alarm</span>
-                            Set Alarm
-                        </a>
-                    </div>
+                    <h1>No Alarm Set</h1>
+                    <a href="/alarm"><button class="cool-button">New Alarm</button></a>
                     {% endif %}
                 </div>
         </div>
     </div>
 
+    <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <script src="static/swiper.js"></script>
     <script>
             document.addEventListener('DOMContentLoaded', function () {
